--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -4,10 +4,33 @@ plugins {
     // The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
     id "dev.flutter.flutter-gradle-plugin"
 }
+//def localProperties = new Properties()
+//def localPropertiesFile = rootProject.file('local.properties')
+//if (localPropertiesFile.exists()) {
+//    localPropertiesFile.withReader('UTF-8') { reader ->
+//        localProperties.load(reader)
+//    }
+//}
+//
+//def flutterVersionCode = localProperties.getProperty('flutter.versionCode')
+//if (flutterVersionCode == null) {
+//    flutterVersionCode = '1'
+//}
+//
+//def flutterVersionName = localProperties.getProperty('flutter.versionName')
+//if (flutterVersionName == null) {
+//    flutterVersionName = '1.0'
+//}
+def keystoreProperties = new Properties()
+def keystorePropertiesFile = rootProject.file('key.properties')
+if (keystorePropertiesFile.exists()) {
+    keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+}
 
 android {
     namespace = "com.teaching.app.teaching"
-    compileSdk = flutter.compileSdkVersion
+
+    compileSdk = 34
     ndkVersion = flutter.ndkVersion
 
     compileOptions {
@@ -22,23 +45,54 @@ android {
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId = "com.teaching.app.teaching"
-        // You can update the following values to match your application needs.
-        // For more information, see: https://flutter.dev/to/review-gradle-config.
-        minSdk = flutter.minSdkVersion
-        targetSdk = flutter.targetSdkVersion
-        versionCode = flutter.versionCode
-        versionName = flutter.versionName
-    }
+        minSdk = 21
+        //noinspection OldTargetApi
+        targetSdk = 34
+        versionCode =1
+        versionName =  "1.0.0"
+        multiDexEnabled true
 
-    buildTypes {
+    }
+    signingConfigs {
         release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig = signingConfigs.debug
+            keyAlias 'upload-keystore' // Replace with the actual key alias
+            keyPassword 'dodo1311'
+            storeFile file('/Users/tl/IdeaProjects/teaching/android/upload-keystore.jks') // Update with the path to your keystore
+            storePassword 'dodo1311'
         }
     }
-}
+    buildTypes {
+        release {
+//            profile {
+//                matchingFallbacks = ['debug', 'release']
+//            }
+            signingConfig signingConfigs.debug
+//            signingConfig signingConfigs.release
+            minifyEnabled true
+//            useProguard true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
 
+
+        }
+//        release {
+//            // TODO: Add your own signing config for the release build.
+//
+//            signingConfig = signingConfigs.debug
+//            signingConfig = signingConfigs.release
+//            minifyEnabled true
+//            shrinkResources true
+//            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'        }
+//    }
+}
+//    lintOptions {
+//        disable 'InvalidPackage'
+//        checkReleaseBuilds false
+//    }
+}
 flutter {
     source = "../.."
+}
+dependencies {
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.1.2'
+    implementation 'androidx.multidex:multidex:2.0.1'
 }
